# PhysicsEngine

./: CMakeLists.txt
src/: configuration.hpp  events.cpp  events.hpp  main.cpp
src/PhysicsEngine/Configuration/: PhysicsEngineConfiguration.hpp
src/PhysicsEngine/Constraints/: ConstraintTemplate.cpp  ConstraintTemplate.hpp  Constraints.cpp  Constraints.hpp  PlaneConstraint.cpp  PlaneConstraint.hpp  PointConstraint.cpp  PointConstraint.hpp
src/PhysicsEngine/Core/: PhysicsEngine.cpp  PhysicsEngine.hpp
src/PhysicsEngine/Display/: Engine3DIntegration.cpp  Engine3DIntegration.hpp
src/PhysicsEngine/Math/: Quaternion.cpp  Quaternion.hpp
src/PhysicsEngine/Object/: PhysicsObject.cpp  PhysicsObject.hpp
